hover issues (💢) fixed with pseudo elements (💃) - previously a timeout was used to cover allow the mouse to cross over   over the gap between the concept and the tooltip. This resulted in   strange behavior at times due to conflicting states on hover show etc| - now transparent pseudo element is placed in the :before :after to   allow the mouse to cross without that same issue. 🎉

--- a/app/css/components/tooltips/concept.css
+++ b/app/css/components/tooltips/concept.css
@@ -93,4 +93,27 @@
             @apply text-darkGray leading-paragraph font-medium;
         }
     }
+
+    &::before {
+        content: "";
+        width: 100%;
+        height: 8px;
+        left: 0;
+        top: 0;
+        display: inline-block;
+        transform: translateY(-100%);
+        background: rgba(0, 0, 0, 0);
+        position: absolute;
+    }
+    &::after {
+        content: "";
+        width: 100%;
+        height: 8px;
+        left: 0;
+        bottom: 0;
+        display: inline-block;
+        transform: translateY(100%);
+        background: rgba(0, 0, 0, 0);
+        position: absolute;
+    }
 }
